ovim/tests/snapshots/unicode_edge_cases_test__combining_diacritic.snap
---
source: ovim/tests/unicode_edge_cases_test.rs
assertion_line: 189
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[ ]
