ovim/tests/snapshots/unicode_edge_cases_test__decomposed.snap
---
source: ovim/tests/unicode_edge_cases_test.rs
assertion_line: 540
expression: test2.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 1

Buffer:
caf[e]́
