ovim/tests/snapshots/unicode_edge_cases_test__delete_tab.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:5
Lines: 1

Buffer:
hello[w]orld
