ovim/tests/snapshots/unicode_edge_cases_test__emoji_yank_paste.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:10
Lines: 1

Buffer:
test 😀 end[😀]
