ovim/tests/snapshots/unicode_edge_cases_test__grapheme_cluster_skin_tone.snap
---
source: ovim/tests/unicode_edge_cases_test.rs
assertion_line: 564
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[ ]
